Added necessary dependencies

--- a/tasks1234/haskell/package.yaml
+++ b/tasks1234/haskell/package.yaml
@@ -9,6 +9,9 @@ copyright:           "2019 Smirnov Oleg, Kanashin Dmitry"
 dependencies:
 - base >= 4.7 && < 5
 - parsec
+- megaparsec
+- parser-combinators
+- text
 
 library:
   source-dirs: src
@@ -24,3 +27,7 @@ executables:
     dependencies:
     - haskell
     - parsec
+    - megaparsec
+    - parser-combinators
+    - text
+
