--- a/tasks1234/haskell/package.yaml
+++ b/tasks1234/haskell/package.yaml
@@ -14,6 +14,7 @@ dependencies:
 - text
 - mtl
 - containers
+- pretty-simple
 
 library:
   source-dirs: src
@@ -34,3 +35,4 @@ executables:
     - text
     - mtl
     - containers
+    - pretty-simple
