--- a/tasks1234/haskell/package.yaml
+++ b/tasks1234/haskell/package.yaml
@@ -15,6 +15,8 @@ dependencies:
 - mtl
 - containers
 - pretty-simple
+- template-haskell
+- neat-interpolation
 
 library:
   source-dirs: src
@@ -36,3 +38,5 @@ executables:
     - mtl
     - containers
     - pretty-simple
+    - template-haskell
+    - neat-interpolation
